ingress/02-ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: ingress-prometheus
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prom.local
    http:
      paths:
      - backend:
          service:
            name: prometheus-stack-kube-prom-prometheus
            port:
              number: 9090
        path: /
        pathType: Prefix
